feat: GetPostsForModeration + swagger for reports
