# backend/internal/controller/http/report.go
@@ -11,21 +11,23 @@ import (
 	"github.com/kotopesp/sos-kotopes/pkg/logger"
 )
 
-// @Summary      Create a report
-// @Description  Create a report for a specific post
-// @Tags         reports
-// @Accept       json
-// @Produce      json
-// @Security     ApiKeyAuth
-// @Param        body  		     report.CreateRequestBodyReport  true  "Report data"
-// @Success      201   {object}  model.Response                 "Report created successfully"
-// @Failure      400   {object}  model.Response                 "Invalid request body or validation error"
-// @Failure      401   {object}  model.Response                 "Unauthorized: Invalid or missing token"
-// @Failure      404   {object}  model.Response                 "Post not found"
-// @Failure      409   {object}  model.Response                 "Conflict: Report already exists"
-// @Failure      422   {object}  model.Response{data=validator.Response}  "Unprocessable entity: Validation error"
-// @Failure      500   {object}  model.Response                 "Internal server error"
-// @Router       /reports [post]
+// @Summary		Create a report
+// @Description	Create a report for a specific post
+// @Tags			reports
+// @Accept			json
+// @Produce		json
+// @Security		ApiKeyAuth
+//
+// @Param			body	body		report.CreateRequestBodyReport			true	"Report data"	"Report data"
+//
+// @Success		201		{object}	model.Response							"Report created successfully"
+// @Failure		400		{object}	model.Response							"Invalid request body or validation error"
+// @Failure		401		{object}	model.Response							"Unauthorized: Invalid or missing token"
+// @Failure		404		{object}	model.Response							"Post not found"
+// @Failure		409		{object}	model.Response							"Conflict: Report already exists"
+// @Failure		422		{object}	model.Response{data=validator.Response}	"Unprocessable entity: Validation error"
+// @Failure		500		{object}	model.Response							"Internal server error"
+// @Router			/reports [post]
 func (r *Router) createReport(ctx *fiber.Ctx) error {
 	var createReport report.CreateRequestBodyReport
 
